<resources>
    <string name="app_name">Peliculas</string>
    <string name="ET_Inicio_Sesion">Iniciar Sesión</string>
    <string name="ET_introduce_usuario">Introduzca su usuario</string>
    <string name="ET_introduce_contraseña">Introduzca su Contraseña</string>
    <string name="ET_nombre">Nombre</string>
    <string name="ET_contraseña">Contraseña</string>
    <string name="ET_mantener_sesion_iniciada">Mantener la sesión iniciada</string>
    <string name="ET_confirmar">Confirmar!</string>
    <string name="ET_no_puede_iniciar_sesion">¿No Puede Iniciar Sesion?</string>
    <string name="ET_crear_cuenta">Crear Una Cuenta</string>
    <string name="ET_acceder">Acceder</string>
    <string name="BT_Entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tiene_una_cuenta">Ya Tiene Una Cuenta?</string>
    <string name="repita_su_contrase_a">Repita su contraseña</string>
    <string name="introzca_su_contrase_a_reg">Introzca su contraseña</string>
    <string name="introduce_su_correo">Introduce su correo</string>
    <string name="repetir_pwd">Repetir pwd</string>
    <string name="contrase_a">Contraseña</string>
    <string name="e_mail">E-mail</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="registro">REGISTRO</string>
    <string name="lista_de_peliculas">Lista de Películas</string>
    <string name="DialogContraseñaDiferente">Las Contraseñas no coinciden</string>
    <string name="validar">Vale</string>
    <string name="DialogUsarioContraseñaMalIntroducidos">El Correo y la Contraseña no coinciden</string>
</resources>
